--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateQuestion"></activity>
-        <activity android:name=".CreateQuiz" />
+        <activity android:name=".CreateQuestionActivity"></activity>
+        <activity android:name=".CreateQuizActivity" />
         <activity
             android:name=".HomeScreenActivity"
             android:label="@string/app_name"
