Expanded quiz and question logic, implemented recycler view to show questions in quiz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateQuestionActivity"></activity>
+        <activity
+            android:name=".TakeQuizActivity"
+            android:label="@string/title_activity_take_quiz"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CreateQuestionActivity" />
         <activity android:name=".CreateQuizActivity" />
         <activity
             android:name=".HomeScreenActivity"
