Added quiz taking functionality and post quiz activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SpaceInvadersActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        <activity
+            android:name=".QuizCompleteActivity"
+            android:label="@string/title_activity_quiz_complete"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".SpaceInvadersActivity"
             android:screenOrientation="landscape"
-            ></activity>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
             android:name=".TakeQuizActivity"
             android:label="@string/title_activity_take_quiz"
